2013-12-09  Hirochika Asai  <asai@scyphus.co.jp>

    * las/arch/x86_64/main.c: Added the DEC instruction


2013-12-08  Hirochika Asai  <asai@scyphus.co.jp>

    * las/arch/x86_64/main.c: Implemented a part of the assembler

    * las/arch/x86_64/main.c: Added the CMP instruction

    * las/arch/x86_64/main.c: Added the CMPXCHG instruction

    * las/arch/x86_64/main.c: Added the CPUID instruction

    * las/arch/x86_64/main.c: Added the CRC32 instruction

    * las/arch/x86_64/main.c: Added the CWD/CDQ/CQO instruction

    * las/arch/x86_64/main.c: Added the DAA instruction

    * las/arch/x86_64/main.c: Added the DAS instruction


2013-12-07  Hirochika Asai  <asai@scyphus.co.jp>

    * las/arch/x86_64/main.c: Added the BSR instruction

    * las/arch/x86_64/main.c: Added the BSWAP instruction

    * las/arch/x86_64/main.c: Added the BT instruction

    * las/arch/x86_64/main.c: Added the BTC instruction

    * las/arch/x86_64/main.c: Added the BTR instruction

    * las/arch/x86_64/main.c: Added the BTS instruction

    * las/arch/x86_64/main.c: Added the CBW/CWDE/CDQE instructions

    * las/arch/x86_64/main.c: Added the CLFLUSH instruction

    * las/arch/x86_64/main.c: Added the CLI instruction


2013-12-06  Hirochika Asai  <asai@scyphus.co.jp>

    * las/arch/x86_64/main.c: Added the BSF instruction


2013-12-05  Hirochika Asai  <asai@scyphus.co.jp>

    * las/las.h: Added the definitions of operand size
    * las/arch/x86_64/eval.h: Added the definitions of operand size
    * las/arch/x86_64/reg.c: Changed to use the SIZE constants

    * las/arch/x86_64/main.c: Implemented ADD instruction

    * las/arch/x86_64/main.c: Implemented AND instruction

    * las/las.h: Fixed the operand and address size prefix
    * las/parser.c: Fixed the operand and address size prefix parser
    * las/arch/x86_64/eval.c: Fixed the operand and address size prefix
                              evaluation
    * las/arch/x86_64/eval.h: Fixed the operand and address size prefix