@@ -2,6 +2,8 @@
 
     * las/arch/x86_64/main.c: Added the DEC instruction
 
+    * las/arch/x86_64/main.c: Added the DIV instruction
+
 
 2013-12-08  Hirochika Asai  <asai@scyphus.co.jp>
 
